examples/errors/06_bad_break/bad_break.txy
fn main(): int
  break;
	return 0;
endfn;